# mangadex-follows-exporter

./: .env.example  .gitignore  CLAUDE.md  LICENSE.txt  README.md  SUPPORT.md  application.py  build.cmd  common.py  config.yaml  configuration.ini  csv_exporter.py  excel_exporter.py  export.py  exporter.py  mangadex.py  mangaupdates_client.py  mangaupdates_exporter.py  prepare.cmd  pyproject.toml  requirements.txt  run.yml
.github/workflows/: run.py  run.yml
clients/: mangadex.py  mangaupdates.py
docs/apis/: mangadex-api.yaml
docs/prompts/: 0001-export-app-prompt.md
exporters/: base.py  csv_file.py  excel_file.py  mangaupdates.py
src/: base_client.py  base_exporter.py  common.py  csv_exporter.py  excel_exporter.py  file_exporter.py  mangadex_client.py  mangadex_follows_exporter.py  mangaupdates_client.py  mangaupdates_exporter.py  throttler.py
src/exporter/: __main__.py  auth.py  cli.py  client.py  config.py  errors.py  ids.py  models.py  ratelimit.py  source.py
src/exporter/exporters/: base.py  columns.py  csv.py  mangaupdates.py  paths.py  registry.py  xlsx.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_columns.py  test_config.py  test_exporters_local.py  test_ids.py  test_mangaupdates.py  test_source.py
