[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mangadex-follows-exporter"
version = "0.1.0"
description = "Config-driven CLI that exports a MangaDex reading list to CSV/Excel and syncs it to MangaUpdates."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE.md" }
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pyyaml>=6.0",
]

[project.scripts]
mangadex-follows-exporter = "exporter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/exporter"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
packages = ["exporter"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["questionary", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
